--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,13 @@
 layout: default
 ---
 
+<article class="toc">
+  {{ page.content | fancytoc }}
+</article>
+
 <article class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time>
+  <!-- <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time> -->
   {{ content }}
 </article>
 
